--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://gbab45045.github.io/cosmicexplorer-kimdaho1",
   "name": "roblox-rank",
   "version": "0.1.0",
   "private": true,
@@ -15,16 +16,19 @@
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-particles": "^2.12.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.8.1",
+    "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
