--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gbab45045.github.io/cosmicexplorer-kimdaho1",
+  "homepage": "https://gbab45045.github.io/cosmic",
   "name": "roblox-rank",
   "version": "0.1.0",
   "private": true,
